// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Focus Teaser should render Article 1`] = `
<DocumentFragment>
  <section
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <h1
          class="MuiTypography-root MuiTypography-h3 emotion-6"
        >
          Foobar Title
        </h1>
      </div>
      <div
        class="emotion-7 emotion-8"
      >
        <article
          class="emotion-9 emotion-10"
          x="0"
          y="0"
        >
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-11"
            href="https://example.com"
          >
            <div
              class="emotion-12 emotion-13"
            >
              <div
                class="emotion-14 emotion-15"
              >
                <img
                  alt="DSC07717"
                  class="emotion-16 emotion-17"
                  loading="lazy"
                  sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
                  srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                  title=""
                />
              </div>
              <div
                class="emotion-18 emotion-19"
              >
                <div
                  class="emotion-20 emotion-21"
                >
                  This is a pretitle
                </div>
              </div>
              <h1
                class="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom emotion-22 emotion-23"
              >
                This is a title
              </h1>
              <p
                class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-24 emotion-25"
              >
                This is a lead
              </p>
              <div
                class="emotion-26 emotion-27"
              >
                <span
                  class="emotion-28 emotion-29"
                >
                  Von Foobar, Foobar 
                </span>
                <time
                  class="emotion-30 emotion-31"
                  datetime="2023-01-01T00:00:00.000Z"
                >
                  | 01.01.2023 
                </time>
              </div>
              <div
                class="emotion-32 emotion-33"
              >
                <div
                  class="MuiChip-root MuiChip-outlined MuiChip-sizeMedium MuiChip-colorPrimary MuiChip-outlinedPrimary emotion-34"
                >
                  <span
                    class="MuiChip-label MuiChip-labelMedium emotion-35"
                  >
                    Concert
                  </span>
                </div>
              </div>
            </div>
          </a>
        </article>
      </div>
    </div>
    <div
      class="emotion-36 emotion-37"
    >
      <article
        class="emotion-38 emotion-10"
        x="0"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-11"
          href="https://example.com"
        >
          <div
            class="emotion-12 emotion-13"
          >
            <div
              class="emotion-14 emotion-15"
            >
              <img
                alt="DSC07717"
                class="emotion-16 emotion-17"
                loading="lazy"
                sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
                srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                title=""
              />
            </div>
            <div
              class="emotion-18 emotion-19"
            >
              <div
                class="emotion-20 emotion-21"
              >
                This is a pretitle
              </div>
            </div>
            <h1
              class="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom emotion-22 emotion-23"
            >
              This is a title
            </h1>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-24 emotion-25"
            >
              This is a lead
            </p>
            <div
              class="emotion-26 emotion-27"
            >
              <span
                class="emotion-28 emotion-29"
              >
                Von Foobar, Foobar 
              </span>
              <time
                class="emotion-30 emotion-31"
                datetime="2023-01-01T00:00:00.000Z"
              >
                | 01.01.2023 
              </time>
            </div>
            <div
              class="emotion-32 emotion-33"
            >
              <div
                class="MuiChip-root MuiChip-outlined MuiChip-sizeMedium MuiChip-colorPrimary MuiChip-outlinedPrimary emotion-34"
              >
                <span
                  class="MuiChip-label MuiChip-labelMedium emotion-35"
                >
                  Concert
                </span>
              </div>
            </div>
          </div>
        </a>
      </article>
      <article
        class="emotion-65 emotion-10"
        x="3"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-11"
          href="https://example.com"
        >
          <div
            class="emotion-12 emotion-13"
          >
            <div
              class="emotion-14 emotion-15"
            >
              <img
                alt="DSC07717"
                class="emotion-16 emotion-17"
                loading="lazy"
                sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
                srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                title=""
              />
            </div>
            <div
              class="emotion-18 emotion-19"
            >
              <div
                class="emotion-20 emotion-21"
              >
                This is a pretitle
              </div>
            </div>
            <h1
              class="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom emotion-22 emotion-23"
            >
              This is a title
            </h1>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-24 emotion-25"
            >
              This is a lead
            </p>
            <div
              class="emotion-26 emotion-27"
            >
              <span
                class="emotion-28 emotion-29"
              >
                Von Foobar, Foobar 
              </span>
              <time
                class="emotion-30 emotion-31"
                datetime="2023-01-01T00:00:00.000Z"
              >
                | 01.01.2023 
              </time>
            </div>
            <div
              class="emotion-32 emotion-33"
            >
              <div
                class="MuiChip-root MuiChip-outlined MuiChip-sizeMedium MuiChip-colorPrimary MuiChip-outlinedPrimary emotion-34"
              >
                <span
                  class="MuiChip-label MuiChip-labelMedium emotion-35"
                >
                  Concert
                </span>
              </div>
            </div>
          </div>
        </a>
      </article>
      <article
        class="emotion-92 emotion-10"
        x="6"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-11"
          href="https://example.com"
        >
          <div
            class="emotion-12 emotion-13"
          >
            <div
              class="emotion-14 emotion-15"
            >
              <img
                alt="DSC07717"
                class="emotion-16 emotion-17"
                loading="lazy"
                sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
                srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                title=""
              />
            </div>
            <div
              class="emotion-18 emotion-19"
            >
              <div
                class="emotion-20 emotion-21"
              >
                This is a pretitle
              </div>
            </div>
            <h1
              class="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom emotion-22 emotion-23"
            >
              This is a title
            </h1>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-24 emotion-25"
            >
              This is a lead
            </p>
            <div
              class="emotion-26 emotion-27"
            >
              <span
                class="emotion-28 emotion-29"
              >
                Von Foobar, Foobar 
              </span>
              <time
                class="emotion-30 emotion-31"
                datetime="2023-01-01T00:00:00.000Z"
              >
                | 01.01.2023 
              </time>
            </div>
            <div
              class="emotion-32 emotion-33"
            >
              <div
                class="MuiChip-root MuiChip-outlined MuiChip-sizeMedium MuiChip-colorPrimary MuiChip-outlinedPrimary emotion-34"
              >
                <span
                  class="MuiChip-label MuiChip-labelMedium emotion-35"
                >
                  Concert
                </span>
              </div>
            </div>
          </div>
        </a>
      </article>
      <article
        class="emotion-119 emotion-10"
        x="9"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-11"
          href="https://example.com"
        >
          <div
            class="emotion-12 emotion-13"
          >
            <div
              class="emotion-14 emotion-15"
            >
              <img
                alt="DSC07717"
                class="emotion-16 emotion-17"
                loading="lazy"
                sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
                srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                title=""
              />
            </div>
            <div
              class="emotion-18 emotion-19"
            >
              <div
                class="emotion-20 emotion-21"
              >
                This is a pretitle
              </div>
            </div>
            <h1
              class="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom emotion-22 emotion-23"
            >
              This is a title
            </h1>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-24 emotion-25"
            >
              This is a lead
            </p>
            <div
              class="emotion-26 emotion-27"
            >
              <span
                class="emotion-28 emotion-29"
              >
                Von Foobar, Foobar 
              </span>
              <time
                class="emotion-30 emotion-31"
                datetime="2023-01-01T00:00:00.000Z"
              >
                | 01.01.2023 
              </time>
            </div>
            <div
              class="emotion-32 emotion-33"
            >
              <div
                class="MuiChip-root MuiChip-outlined MuiChip-sizeMedium MuiChip-colorPrimary MuiChip-outlinedPrimary emotion-34"
              >
                <span
                  class="MuiChip-label MuiChip-labelMedium emotion-35"
                >
                  Concert
                </span>
              </div>
            </div>
          </div>
        </a>
      </article>
    </div>
  </section>
</DocumentFragment>
`;

exports[`Focus Teaser should render Event 1`] = `
<DocumentFragment>
  <section
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <h1
          class="MuiTypography-root MuiTypography-h3 emotion-6"
        >
          Foobar Title
        </h1>
      </div>
      <div
        class="emotion-7 emotion-8"
      >
        <article
          class="emotion-9 emotion-10"
          x="0"
          y="0"
        >
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-11"
            href="https://example.com"
          >
            <div
              class="emotion-12 emotion-13"
            >
              <div
                class="emotion-14 emotion-15"
              >
                <img
                  alt="DSC07717"
                  class="emotion-16 emotion-17"
                  loading="lazy"
                  sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
                  srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                  title=""
                />
              </div>
              <div
                class="emotion-18 emotion-19"
              >
                <div
                  class="emotion-20 emotion-21"
                >
                  This is a pretitle
                </div>
              </div>
              <h1
                class="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom emotion-22 emotion-23"
              >
                This is a title
              </h1>
              <p
                class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-24 emotion-25"
              >
                This is a lead
              </p>
              <div
                class="emotion-26 emotion-27"
              >
                <time
                  class="emotion-28 emotion-29"
                  datetime="2023-01-01T00:00:00.000Z"
                >
                  01.01.2023 
                </time>
              </div>
              <div
                class="emotion-30 emotion-31"
              >
                <div
                  class="MuiChip-root MuiChip-outlined MuiChip-sizeMedium MuiChip-colorPrimary MuiChip-outlinedPrimary emotion-32"
                >
                  <span
                    class="MuiChip-label MuiChip-labelMedium emotion-33"
                  >
                    Concert
                  </span>
                </div>
              </div>
            </div>
          </a>
        </article>
      </div>
    </div>
    <div
      class="emotion-34 emotion-35"
    >
      <article
        class="emotion-36 emotion-10"
        x="0"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-11"
          href="https://example.com"
        >
          <div
            class="emotion-12 emotion-13"
          >
            <div
              class="emotion-14 emotion-15"
            >
              <img
                alt="DSC07717"
                class="emotion-16 emotion-17"
                loading="lazy"
                sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
                srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                title=""
              />
            </div>
            <div
              class="emotion-18 emotion-19"
            >
              <div
                class="emotion-20 emotion-21"
              >
                This is a pretitle
              </div>
            </div>
            <h1
              class="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom emotion-22 emotion-23"
            >
              This is a title
            </h1>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-24 emotion-25"
            >
              This is a lead
            </p>
            <div
              class="emotion-26 emotion-27"
            >
              <time
                class="emotion-28 emotion-29"
                datetime="2023-01-01T00:00:00.000Z"
              >
                01.01.2023 
              </time>
            </div>
            <div
              class="emotion-30 emotion-31"
            >
              <div
                class="MuiChip-root MuiChip-outlined MuiChip-sizeMedium MuiChip-colorPrimary MuiChip-outlinedPrimary emotion-32"
              >
                <span
                  class="MuiChip-label MuiChip-labelMedium emotion-33"
                >
                  Concert
                </span>
              </div>
            </div>
          </div>
        </a>
      </article>
      <article
        class="emotion-61 emotion-10"
        x="3"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-11"
          href="https://example.com"
        >
          <div
            class="emotion-12 emotion-13"
          >
            <div
              class="emotion-14 emotion-15"
            >
              <img
                alt="DSC07717"
                class="emotion-16 emotion-17"
                loading="lazy"
                sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
                srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                title=""
              />
            </div>
            <div
              class="emotion-18 emotion-19"
            >
              <div
                class="emotion-20 emotion-21"
              >
                This is a pretitle
              </div>
            </div>
            <h1
              class="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom emotion-22 emotion-23"
            >
              This is a title
            </h1>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-24 emotion-25"
            >
              This is a lead
            </p>
            <div
              class="emotion-26 emotion-27"
            >
              <time
                class="emotion-28 emotion-29"
                datetime="2023-01-01T00:00:00.000Z"
              >
                01.01.2023 
              </time>
            </div>
            <div
              class="emotion-30 emotion-31"
            >
              <div
                class="MuiChip-root MuiChip-outlined MuiChip-sizeMedium MuiChip-colorPrimary MuiChip-outlinedPrimary emotion-32"
              >
                <span
                  class="MuiChip-label MuiChip-labelMedium emotion-33"
                >
                  Concert
                </span>
              </div>
            </div>
          </div>
        </a>
      </article>
      <article
        class="emotion-86 emotion-10"
        x="6"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-11"
          href="https://example.com"
        >
          <div
            class="emotion-12 emotion-13"
          >
            <div
              class="emotion-14 emotion-15"
            >
              <img
                alt="DSC07717"
                class="emotion-16 emotion-17"
                loading="lazy"
                sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
                srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                title=""
              />
            </div>
            <div
              class="emotion-18 emotion-19"
            >
              <div
                class="emotion-20 emotion-21"
              >
                This is a pretitle
              </div>
            </div>
            <h1
              class="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom emotion-22 emotion-23"
            >
              This is a title
            </h1>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-24 emotion-25"
            >
              This is a lead
            </p>
            <div
              class="emotion-26 emotion-27"
            >
              <time
                class="emotion-28 emotion-29"
                datetime="2023-01-01T00:00:00.000Z"
              >
                01.01.2023 
              </time>
            </div>
            <div
              class="emotion-30 emotion-31"
            >
              <div
                class="MuiChip-root MuiChip-outlined MuiChip-sizeMedium MuiChip-colorPrimary MuiChip-outlinedPrimary emotion-32"
              >
                <span
                  class="MuiChip-label MuiChip-labelMedium emotion-33"
                >
                  Concert
                </span>
              </div>
            </div>
          </div>
        </a>
      </article>
      <article
        class="emotion-111 emotion-10"
        x="9"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-11"
          href="https://example.com"
        >
          <div
            class="emotion-12 emotion-13"
          >
            <div
              class="emotion-14 emotion-15"
            >
              <img
                alt="DSC07717"
                class="emotion-16 emotion-17"
                loading="lazy"
                sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
                srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                title=""
              />
            </div>
            <div
              class="emotion-18 emotion-19"
            >
              <div
                class="emotion-20 emotion-21"
              >
                This is a pretitle
              </div>
            </div>
            <h1
              class="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom emotion-22 emotion-23"
            >
              This is a title
            </h1>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-24 emotion-25"
            >
              This is a lead
            </p>
            <div
              class="emotion-26 emotion-27"
            >
              <time
                class="emotion-28 emotion-29"
                datetime="2023-01-01T00:00:00.000Z"
              >
                01.01.2023 
              </time>
            </div>
            <div
              class="emotion-30 emotion-31"
            >
              <div
                class="MuiChip-root MuiChip-outlined MuiChip-sizeMedium MuiChip-colorPrimary MuiChip-outlinedPrimary emotion-32"
              >
                <span
                  class="MuiChip-label MuiChip-labelMedium emotion-33"
                >
                  Concert
                </span>
              </div>
            </div>
          </div>
        </a>
      </article>
    </div>
  </section>
</DocumentFragment>
`;

exports[`Focus Teaser should render Page 1`] = `
<DocumentFragment>
  <section
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <h1
          class="MuiTypography-root MuiTypography-h3 emotion-6"
        >
          Foobar Title
        </h1>
      </div>
      <div
        class="emotion-7 emotion-8"
      >
        <article
          class="emotion-9 emotion-10"
          x="0"
          y="0"
        >
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-11"
            href="https://example.com"
          >
            <div
              class="emotion-12 emotion-13"
            >
              <div
                class="emotion-14 emotion-15"
              >
                <img
                  alt="DSC07717"
                  class="emotion-16 emotion-17"
                  loading="lazy"
                  sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
                  srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                  title=""
                />
              </div>
              <div
                class="emotion-18 emotion-19"
              >
                <div
                  class="emotion-20 emotion-21"
                >
                  This is a pretitle
                </div>
              </div>
              <h1
                class="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom emotion-22 emotion-23"
              >
                This is a title
              </h1>
              <p
                class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-24 emotion-25"
              >
                This is a lead
              </p>
              <div
                class="emotion-26 emotion-27"
              >
                <time
                  class="emotion-28 emotion-29"
                  datetime="2023-01-01T00:00:00.000Z"
                >
                  01.01.2023 
                </time>
              </div>
              <div
                class="emotion-30 emotion-31"
              >
                <div
                  class="MuiChip-root MuiChip-outlined MuiChip-sizeMedium MuiChip-colorPrimary MuiChip-outlinedPrimary emotion-32"
                >
                  <span
                    class="MuiChip-label MuiChip-labelMedium emotion-33"
                  >
                    Concert
                  </span>
                </div>
              </div>
            </div>
          </a>
        </article>
      </div>
    </div>
    <div
      class="emotion-34 emotion-35"
    >
      <article
        class="emotion-36 emotion-10"
        x="0"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-11"
          href="https://example.com"
        >
          <div
            class="emotion-12 emotion-13"
          >
            <div
              class="emotion-14 emotion-15"
            >
              <img
                alt="DSC07717"
                class="emotion-16 emotion-17"
                loading="lazy"
                sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
                srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                title=""
              />
            </div>
            <div
              class="emotion-18 emotion-19"
            >
              <div
                class="emotion-20 emotion-21"
              >
                This is a pretitle
              </div>
            </div>
            <h1
              class="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom emotion-22 emotion-23"
            >
              This is a title
            </h1>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-24 emotion-25"
            >
              This is a lead
            </p>
            <div
              class="emotion-26 emotion-27"
            >
              <time
                class="emotion-28 emotion-29"
                datetime="2023-01-01T00:00:00.000Z"
              >
                01.01.2023 
              </time>
            </div>
            <div
              class="emotion-30 emotion-31"
            >
              <div
                class="MuiChip-root MuiChip-outlined MuiChip-sizeMedium MuiChip-colorPrimary MuiChip-outlinedPrimary emotion-32"
              >
                <span
                  class="MuiChip-label MuiChip-labelMedium emotion-33"
                >
                  Concert
                </span>
              </div>
            </div>
          </div>
        </a>
      </article>
      <article
        class="emotion-61 emotion-10"
        x="3"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-11"
          href="https://example.com"
        >
          <div
            class="emotion-12 emotion-13"
          >
            <div
              class="emotion-14 emotion-15"
            >
              <img
                alt="DSC07717"
                class="emotion-16 emotion-17"
                loading="lazy"
                sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
                srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                title=""
              />
            </div>
            <div
              class="emotion-18 emotion-19"
            >
              <div
                class="emotion-20 emotion-21"
              >
                This is a pretitle
              </div>
            </div>
            <h1
              class="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom emotion-22 emotion-23"
            >
              This is a title
            </h1>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-24 emotion-25"
            >
              This is a lead
            </p>
            <div
              class="emotion-26 emotion-27"
            >
              <time
                class="emotion-28 emotion-29"
                datetime="2023-01-01T00:00:00.000Z"
              >
                01.01.2023 
              </time>
            </div>
            <div
              class="emotion-30 emotion-31"
            >
              <div
                class="MuiChip-root MuiChip-outlined MuiChip-sizeMedium MuiChip-colorPrimary MuiChip-outlinedPrimary emotion-32"
              >
                <span
                  class="MuiChip-label MuiChip-labelMedium emotion-33"
                >
                  Concert
                </span>
              </div>
            </div>
          </div>
        </a>
      </article>
      <article
        class="emotion-86 emotion-10"
        x="6"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-11"
          href="https://example.com"
        >
          <div
            class="emotion-12 emotion-13"
          >
            <div
              class="emotion-14 emotion-15"
            >
              <img
                alt="DSC07717"
                class="emotion-16 emotion-17"
                loading="lazy"
                sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
                srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                title=""
              />
            </div>
            <div
              class="emotion-18 emotion-19"
            >
              <div
                class="emotion-20 emotion-21"
              >
                This is a pretitle
              </div>
            </div>
            <h1
              class="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom emotion-22 emotion-23"
            >
              This is a title
            </h1>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-24 emotion-25"
            >
              This is a lead
            </p>
            <div
              class="emotion-26 emotion-27"
            >
              <time
                class="emotion-28 emotion-29"
                datetime="2023-01-01T00:00:00.000Z"
              >
                01.01.2023 
              </time>
            </div>
            <div
              class="emotion-30 emotion-31"
            >
              <div
                class="MuiChip-root MuiChip-outlined MuiChip-sizeMedium MuiChip-colorPrimary MuiChip-outlinedPrimary emotion-32"
              >
                <span
                  class="MuiChip-label MuiChip-labelMedium emotion-33"
                >
                  Concert
                </span>
              </div>
            </div>
          </div>
        </a>
      </article>
      <article
        class="emotion-111 emotion-10"
        x="9"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-11"
          href="https://example.com"
        >
          <div
            class="emotion-12 emotion-13"
          >
            <div
              class="emotion-14 emotion-15"
            >
              <img
                alt="DSC07717"
                class="emotion-16 emotion-17"
                loading="lazy"
                sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
                srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                title=""
              />
            </div>
            <div
              class="emotion-18 emotion-19"
            >
              <div
                class="emotion-20 emotion-21"
              >
                This is a pretitle
              </div>
            </div>
            <h1
              class="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom emotion-22 emotion-23"
            >
              This is a title
            </h1>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-24 emotion-25"
            >
              This is a lead
            </p>
            <div
              class="emotion-26 emotion-27"
            >
              <time
                class="emotion-28 emotion-29"
                datetime="2023-01-01T00:00:00.000Z"
              >
                01.01.2023 
              </time>
            </div>
            <div
              class="emotion-30 emotion-31"
            >
              <div
                class="MuiChip-root MuiChip-outlined MuiChip-sizeMedium MuiChip-colorPrimary MuiChip-outlinedPrimary emotion-32"
              >
                <span
                  class="MuiChip-label MuiChip-labelMedium emotion-33"
                >
                  Concert
                </span>
              </div>
            </div>
          </div>
        </a>
      </article>
    </div>
  </section>
</DocumentFragment>
`;

exports[`Focus Teaser should render WithLink 1`] = `
<DocumentFragment>
  <section
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
          href="https://example.com"
        >
          <h1
            class="MuiTypography-root MuiTypography-h3 emotion-7"
          >
            Foobar Title
          </h1>
        </a>
      </div>
      <div
        class="emotion-8 emotion-9"
      >
        <article
          class="emotion-10 emotion-11"
          x="0"
          y="0"
        >
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
            href="https://example.com"
          >
            <div
              class="emotion-13 emotion-14"
            >
              <div
                class="emotion-15 emotion-16"
              >
                <img
                  alt="DSC07717"
                  class="emotion-17 emotion-18"
                  loading="lazy"
                  sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
                  srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                  title=""
                />
              </div>
              <div
                class="emotion-19 emotion-20"
              >
                <div
                  class="emotion-21 emotion-22"
                >
                  This is a pretitle
                </div>
              </div>
              <h1
                class="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom emotion-23 emotion-24"
              >
                This is a title
              </h1>
              <p
                class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-25 emotion-26"
              >
                This is a lead
              </p>
              <div
                class="emotion-27 emotion-28"
              >
                <span
                  class="emotion-29 emotion-30"
                >
                  Von Foobar, Foobar 
                </span>
                <time
                  class="emotion-31 emotion-32"
                  datetime="2023-01-01T00:00:00.000Z"
                >
                  | 01.01.2023 
                </time>
              </div>
              <div
                class="emotion-33 emotion-34"
              >
                <div
                  class="MuiChip-root MuiChip-outlined MuiChip-sizeMedium MuiChip-colorPrimary MuiChip-outlinedPrimary emotion-35"
                >
                  <span
                    class="MuiChip-label MuiChip-labelMedium emotion-36"
                  >
                    Concert
                  </span>
                </div>
              </div>
            </div>
          </a>
        </article>
      </div>
    </div>
    <div
      class="emotion-37 emotion-38"
    >
      <article
        class="emotion-39 emotion-11"
        x="0"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
          href="https://example.com"
        >
          <div
            class="emotion-13 emotion-14"
          >
            <div
              class="emotion-15 emotion-16"
            >
              <img
                alt="DSC07717"
                class="emotion-17 emotion-18"
                loading="lazy"
                sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
                srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                title=""
              />
            </div>
            <div
              class="emotion-19 emotion-20"
            >
              <div
                class="emotion-21 emotion-22"
              >
                This is a pretitle
              </div>
            </div>
            <h1
              class="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom emotion-23 emotion-24"
            >
              This is a title
            </h1>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-25 emotion-26"
            >
              This is a lead
            </p>
            <div
              class="emotion-27 emotion-28"
            >
              <span
                class="emotion-29 emotion-30"
              >
                Von Foobar, Foobar 
              </span>
              <time
                class="emotion-31 emotion-32"
                datetime="2023-01-01T00:00:00.000Z"
              >
                | 01.01.2023 
              </time>
            </div>
            <div
              class="emotion-33 emotion-34"
            >
              <div
                class="MuiChip-root MuiChip-outlined MuiChip-sizeMedium MuiChip-colorPrimary MuiChip-outlinedPrimary emotion-35"
              >
                <span
                  class="MuiChip-label MuiChip-labelMedium emotion-36"
                >
                  Concert
                </span>
              </div>
            </div>
          </div>
        </a>
      </article>
      <article
        class="emotion-66 emotion-11"
        x="3"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
          href="https://example.com"
        >
          <div
            class="emotion-13 emotion-14"
          >
            <div
              class="emotion-15 emotion-16"
            >
              <img
                alt="DSC07717"
                class="emotion-17 emotion-18"
                loading="lazy"
                sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
                srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                title=""
              />
            </div>
            <div
              class="emotion-19 emotion-20"
            >
              <div
                class="emotion-21 emotion-22"
              >
                This is a pretitle
              </div>
            </div>
            <h1
              class="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom emotion-23 emotion-24"
            >
              This is a title
            </h1>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-25 emotion-26"
            >
              This is a lead
            </p>
            <div
              class="emotion-27 emotion-28"
            >
              <span
                class="emotion-29 emotion-30"
              >
                Von Foobar, Foobar 
              </span>
              <time
                class="emotion-31 emotion-32"
                datetime="2023-01-01T00:00:00.000Z"
              >
                | 01.01.2023 
              </time>
            </div>
            <div
              class="emotion-33 emotion-34"
            >
              <div
                class="MuiChip-root MuiChip-outlined MuiChip-sizeMedium MuiChip-colorPrimary MuiChip-outlinedPrimary emotion-35"
              >
                <span
                  class="MuiChip-label MuiChip-labelMedium emotion-36"
                >
                  Concert
                </span>
              </div>
            </div>
          </div>
        </a>
      </article>
      <article
        class="emotion-93 emotion-11"
        x="6"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
          href="https://example.com"
        >
          <div
            class="emotion-13 emotion-14"
          >
            <div
              class="emotion-15 emotion-16"
            >
              <img
                alt="DSC07717"
                class="emotion-17 emotion-18"
                loading="lazy"
                sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
                srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                title=""
              />
            </div>
            <div
              class="emotion-19 emotion-20"
            >
              <div
                class="emotion-21 emotion-22"
              >
                This is a pretitle
              </div>
            </div>
            <h1
              class="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom emotion-23 emotion-24"
            >
              This is a title
            </h1>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-25 emotion-26"
            >
              This is a lead
            </p>
            <div
              class="emotion-27 emotion-28"
            >
              <span
                class="emotion-29 emotion-30"
              >
                Von Foobar, Foobar 
              </span>
              <time
                class="emotion-31 emotion-32"
                datetime="2023-01-01T00:00:00.000Z"
              >
                | 01.01.2023 
              </time>
            </div>
            <div
              class="emotion-33 emotion-34"
            >
              <div
                class="MuiChip-root MuiChip-outlined MuiChip-sizeMedium MuiChip-colorPrimary MuiChip-outlinedPrimary emotion-35"
              >
                <span
                  class="MuiChip-label MuiChip-labelMedium emotion-36"
                >
                  Concert
                </span>
              </div>
            </div>
          </div>
        </a>
      </article>
      <article
        class="emotion-120 emotion-11"
        x="9"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
          href="https://example.com"
        >
          <div
            class="emotion-13 emotion-14"
          >
            <div
              class="emotion-15 emotion-16"
            >
              <img
                alt="DSC07717"
                class="emotion-17 emotion-18"
                loading="lazy"
                sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
                srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                title=""
              />
            </div>
            <div
              class="emotion-19 emotion-20"
            >
              <div
                class="emotion-21 emotion-22"
              >
                This is a pretitle
              </div>
            </div>
            <h1
              class="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom emotion-23 emotion-24"
            >
              This is a title
            </h1>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-25 emotion-26"
            >
              This is a lead
            </p>
            <div
              class="emotion-27 emotion-28"
            >
              <span
                class="emotion-29 emotion-30"
              >
                Von Foobar, Foobar 
              </span>
              <time
                class="emotion-31 emotion-32"
                datetime="2023-01-01T00:00:00.000Z"
              >
                | 01.01.2023 
              </time>
            </div>
            <div
              class="emotion-33 emotion-34"
            >
              <div
                class="MuiChip-root MuiChip-outlined MuiChip-sizeMedium MuiChip-colorPrimary MuiChip-outlinedPrimary emotion-35"
              >
                <span
                  class="MuiChip-label MuiChip-labelMedium emotion-36"
                >
                  Concert
                </span>
              </div>
            </div>
          </div>
        </a>
      </article>
    </div>
  </section>
</DocumentFragment>
`;
